<resources>
    <string name="connect">Connect</string>
    <string name="connection_status">Connection Status</string>
    <string name="connection_failed">Connection Failed</string>
    <string name="show_dashboard">Show Dashboard</string>
    <string name="select_device">Select Device</string>
    <string name="bonded_devices">Bonded Devices</string>
    <string name="car_connect">Car Connect</string>
    <string name="privacy_policy_title">Privacy Policy</string>
    <string name="privacy_policy_body">Please accept <a href="https://github.com/kapilsukhyani/car_connect/blob/master/privacy_policy.md">Policy</a> by clicking OK.</string>

    <string name="bluetooth_error_title">Bluetooth Error</string>
    <string name="bluetooth_not_available_message">Bluetooth not available.</string>
    <string name="setting_up">Setting Up</string>

    <string name="connection_error_message">Connection to %1$s failed [%2$s] </string>
    <string name="last_device_auto_connection_bt_error">Connection to %1$s isn\'t possible, bluetooth not available</string>
    <string name="setup_error_message">%1$s Setup failed [%2$s] </string>
    <string name="vehicle_info_loading_error_message">Loading %1$s vehicle info failed [%2$s] </string>
    <string name="running_setup_message">Setting %1$s up</string>
    <string name="loading_vehicle_info_message">[%1$s] Loading vehicle info</string>
    <string name="connecting_message">Connecting to %1$s</string>


    <string name="setup_error_title">Setup Error</string>

    <string name="data_loading_error">Data Error</string>
    <string name="data_load_error">Data load error [%1$s]</string>


    <!-- Settings -->
    <string name="settings">Settings</string>
    <string name="background_connection_pref_key" translatable="false">background_connection</string>
    <string name="privacy_policy_flag_key" translatable="false">privacy_policy_flag</string>
    <string name="auto_connect_pref_key" translatable="false">auto_connect</string>
    <string name="data_settings_pref_key" translatable="false">data_settings</string>
    <string name="unit_system_pref_key" translatable="false">unit_system</string>
    <string name="fuel_level_pull_frequency_pref_key" translatable="false">fuel_level_pull_frequency</string>
    <string name="fast_changing_data_pull_frequency_pref_key" translatable="false">fast_changing_data_pull_frequency</string>
    <string name="pressure_pull_frequency_pref_key" translatable="false">pressure_pull_frequency</string>
    <string name="temperature_pull_frequency_pref_key" translatable="false">temperature_pull_frequency</string>
    <string name="notifications_settings_pref_key" translatable="false">notification_settings</string>
    <string name="speed_notifications_pref_key" translatable="false">speed_notification</string>
    <string name="speed_notification_threshold_pref_key" translatable="false">speed_notification_threshold</string>
    <string name="fuel_level_notification_pref_key" translatable="false">fuel_level_notification</string>
    <string name="fuel_level_notification_threshold_pref_key" translatable="false">fuel_level_notification_threshold</string>
    <string name="display_settings_pref_key" translatable="false">display_settings</string>
    <string name="dashboard_settings_pref_key" translatable="false">dashboard_theme</string>
    <string name="data_settings" translatable="false">OBD Data Settings</string>
    <string name="notifications_settings" translatable="false">Notifications Settings</string>
    <string name="display_settings" translatable="false">Display Settings</string>
    <string name="Maintain_background_connection" translatable="false">Maintain Background Connection</string>
    <string name="auto_connect_to_last_connected" translatable="false">Auto Connect To Recent Device</string>
    <string name="collect_usage_data_pref_key" translatable="false">collect_usage_data_pref_key</string>
    <string name="collect_usage_data">Collect Usage Data</string>

    <string name="unit_system">Unit System</string>
    <string name="matrix">Matrix</string>
    <string name="imperial">Imperial</string>


    <string name="fuel_level_frequency_text">Fuel Level Refresh Frequency</string>
    <string name="temperature_frequency_text">Temperature Refresh Frequency</string>
    <string name="fast_changing_data_frequency_text">Fast Changing Data Refresh Frequency</string>
    <string name="pressure_frequency_text">Pressure Refresh Frequency</string>
    <string name="speed_notification">Speed Notification</string>
    <string name="fuel_level_notification">Fuel Level Notification</string>


    <string name="speed_notification_threshold">Speed Notification Threshold</string>
    <string name="fuel_level_notification_threshold">Fuel Level Notification Threshold</string>
    <string name="dashboard_theme">Dashboard Theme</string>


    <string name="default_fast_changing_data_pull_frequency">50</string>
    <string name="default_fuel_level_pull_frequency">1</string>
    <string name="default_temp_pull_frequency">500</string>
    <string name="default_pressure_pull_frequency">1</string>
    <string name="default_speed_notification_threshold">70</string>
    <string name="default_fuel_level_notification_threshold">30</string>
    <string name="dark_dashboard_theme">Dark</string>
    <string name="light_dashboard_theme">Light</string>
    <string name="clear_dtcs">Clear DTCs</string>
    <string name="operation_failed">Operation Failed</string>
    <string name="clear_dtc_error_message">Something went wrong while clearing DTCs</string>
    <string name="please_wait">Please Wait</string>
    <string name="clearing_dtcs">Clearing DTCs</string>
    <string name="foreground_notification_title">OBD Connection Active</string>
    <string name="foreground_notification_description">Connection to your vehicle is active in background.</string>
    <string name="stop">Drop Connection</string>
    <string name="usage_report_banner_text">This app collects usage report to improve experience. Goto Settings to turn this off anytime.</string>
    <string name="app_icon">app icon</string>


    <string-array name="unit_systems">
        <item>@string/matrix</item>
        <item>@string/imperial</item>
    </string-array>


    <string-array name="fast_changing_data_pull_frequency_options">
        <item>50 ms</item>
        <item>100 ms</item>
        <item>150 ms</item>
    </string-array>

    <string-array name="fast_changing_data_pull_frequency_values">
        <item>@string/default_fast_changing_data_pull_frequency</item>
        <item>100</item>
        <item>150</item>
    </string-array>

    <string-array name="fuel_level_pull_frequency_options">
        <item>1 min</item>
        <item>2 min</item>
        <item>3 min</item>
    </string-array>

    <string-array name="fuel_level_pull_frequency_values">
        <item>@string/default_fuel_level_pull_frequency</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="temp_pull_frequency_options">
        <item>500 ms</item>
        <item>1000 ms</item>
        <item>1500 ms</item>
    </string-array>

    <string-array name="temp_pull_frequency_values">
        <item>@string/default_temp_pull_frequency</item>
        <item>1000</item>
        <item>1500</item>
    </string-array>

    <string-array name="pressure_pull_frequency_options">
        <item>1 min</item>
        <item>2 min</item>
        <item>3 min</item>
    </string-array>

    <string-array name="pressure_pull_frequency_values">
        <item>@string/default_pressure_pull_frequency</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="speed_notification_threshold_options">
        <item>70 km/h</item>
        <item>80 km/h</item>
        <item>90 km/h</item>
        <item>100 km/h</item>
        <item>110 km/h</item>
        <item>120 km/h</item>
    </string-array>

    <string-array name="speed_notification_threshold_values">
        <item>@string/default_speed_notification_threshold</item>
        <item>80</item>
        <item>90</item>
        <item>100</item>
        <item>110</item>
        <item>120</item>
    </string-array>

    <string-array name="fuel_level_notification_threshold_options">
        <item>30%</item>
        <item>20%</item>
        <item>10%</item>
        <item>5%</item>
    </string-array>

    <string-array name="fuel_level_notification_threshold_values">
        <item>@string/default_fuel_level_notification_threshold</item>
        <item>20</item>
        <item>10</item>
        <item>5</item>
    </string-array>


    <string-array name="dashboard_theme_options">
        <item>@string/dark_dashboard_theme</item>
        <item>@string/light_dashboard_theme</item>
    </string-array>


</resources>
